# aes_rng

./: .gitignore  Cargo.toml  build.rs
include/: AES_RNG.cpp  wrapper.cpp
src/: lib.rs  main.rs
