[package]
name = "aes_rng"
version = "0.1.0"
authors = ["void404 <wojciech.nawa@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpp = "0.5.6"

[build-dependencies]
cc = "1.0.66"
cpp_build = "0.5.6"