[package]
name = "aes_rng"
version = "0.1.0"
authors = ["void404 <wojciech.nawa@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.82"
rand_core = "0.6.1"

[build-dependencies]
cc = { version = "1.0.66", features = ["parallel"]}